Fixed overview_1.svg sizing/spacing.

--- a/cris/style.css
+++ b/cris/style.css
@@ -105,13 +105,10 @@ faq-container li {
 .link-hover a:hover, .link-hover p:hover {
   text-decoration: underline;
 }
-.linked-image {
+.large-picture {
   display: block;
   margin: 20px auto;
-  width: 1440px;
-  height: auto;
-  border: 2px solid #ddd;
-  border-radius: 8px;
+  width: 90%;
   transition: transform 0.3s ease;
 }
 /* Tables */
@@ -228,25 +225,25 @@ table td:not(:first-child), th:not(:first-child) {
 }
 /* Create a grid system for items */
 .grid-container {
-  background: rgba(174, 214, 241, 0.20);
+  background: rgba(174, 214, 241, 0.25);
   border: 0.5px solid rgba(0, 0, 0, 1);
-  border-radius: 5px;
+  border-radius: 8px;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
   display: grid;
-  gap: 10px;
+  gap: 15px;
   grid-template-columns: repeat(3, 1fr);
   margin: 10px auto;
   padding: 10px;
   width: fit-content;
 }
 .grid-item {
-  background: rgba(255, 255, 255, 0.75);
+  background: rgba(255, 255, 255, 0.55);
   border: 0.5px solid rgba(0, 0, 0, .5);
   border-radius: 5px;
   color: black;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25);
   font-family: Tahoma, sans-serif;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: bold;
   padding: 25px 10px;
   text-align: center;
